[gd_scene load_steps=15 format=2]

[ext_resource path="res://models/starship_exterior.gltf" type="PackedScene" id=1]
[ext_resource path="res://scenes/starship/raptor_plume.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/starship/starship.gd" type="Script" id=3]
[ext_resource path="res://sound/starship_sound.ogg" type="AudioStream" id=4]
[ext_resource path="res://models/starship-interior.gltf" type="PackedScene" id=5]
[ext_resource path="res://scenes/starship/starship_chair.tscn" type="PackedScene" id=6]
[ext_resource path="res://baking/starship.lmbake" type="BakedLightmapData" id=7]
[ext_resource path="res://scenes/utils/interactable_button.tscn" type="PackedScene" id=8]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.188939, 1.4696, 0.390352 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.188939, 1.65407, 0.390352 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.188939, 1.51018, 0.390352 )

[sub_resource type="CylinderShape" id=4]
height = 0.392643
radius = 4.49891

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../ext_door_panel:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../ext_door_panel:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../ext_door_panel:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=6]
resource_name = "open_ext_door"
length = 10.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("../ext_door_panel:rotation_degrees:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 10 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("../ext_door_panel:rotation_degrees:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 10 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("../ext_door_panel:rotation_degrees:z")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -101.627, -2.2, 1.14738, 0.25, 0 ),
"times": PoolRealArray( 0, 10 )
}

[node name="starship" instance=ExtResource( 1 )]
script = ExtResource( 3 )
type = 1

[node name="heatshield" parent="." index="0"]
layers = 2

[node name="body_no_window" parent="." index="1"]
visible = false

[node name="header_tank" parent="." index="2"]
visible = false

[node name="ext_door_panel" parent="." index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.25301, 29.8831, 0.000532892 )

[node name="plume" type="Spatial" parent="." index="15"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.454215, 0, 0.812347 )

[node name="raptor_plume" parent="plume" index="0" instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.19135, 0 )
particle_count = 100
particle_lifetime = 0.3

[node name="Raptor1" type="Position3D" parent="plume/raptor_plume" index="1"]

[node name="Raptor2" type="Position3D" parent="plume/raptor_plume" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0106416, 0, -0.785169 )

[node name="Raptor3" type="Position3D" parent="plume/raptor_plume" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.682816, 0, -0.407403 )

[node name="EngineSound" type="AudioStreamPlayer3D" parent="." index="16"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.814951, 0 )
stream = ExtResource( 4 )
unit_size = 100.0

[node name="starship_interior" parent="." index="17" instance=ExtResource( 5 )]

[node name="BakedLightmap" type="BakedLightmap" parent="starship_interior" index="8"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 36.7354, 0 )
extents = Vector3( 4.79646, 9.17417, 4.7497 )
bounces = 1
capture_enabled = false
light_data = ExtResource( 7 )

[node name="lights" type="Spatial" parent="starship_interior" index="9"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 34.577, 0 )
visible = false

[node name="OmniLight" type="OmniLight" parent="starship_interior/lights" index="0"]
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 11.735

[node name="OmniLight2" type="OmniLight" parent="starship_interior/lights" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.8122, 0 )
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 11.735

[node name="OmniLight3" type="OmniLight" parent="starship_interior/lights" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.0713, 0 )
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 11.735

[node name="OmniLight4" type="OmniLight" parent="starship_interior/lights" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.4774, 0 )
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 11.735

[node name="OmniLight5" type="OmniLight" parent="starship_interior/lights" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.6499, 0 )
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 2.099

[node name="OmniLight6" type="OmniLight" parent="starship_interior/lights" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10.5978, 0 )
light_energy = 1.2
light_indirect_energy = 1.5
light_size = 9.102
light_specular = 0.2
light_bake_mode = 2
light_cull_mask = 4294967293
omni_range = 11.735

[node name="LAD1" type="StaticBody" parent="starship_interior" index="11"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.23459, 28.9893, 0 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD1" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.341352, 0 )
shape = SubResource( 1 )

[node name="LAD2" type="StaticBody" parent="starship_interior" index="12"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0538693, 30.6116, 0.378371 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD2" index="0"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0.994572, 0 )
shape = SubResource( 2 )

[node name="LAD3" type="StaticBody" parent="starship_interior" index="13"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0538693, 32.9459, -0.33135 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD3" index="0"]
transform = Transform( 1, 0, 3.55271e-15, 0, 1, 0, -3.55271e-15, 0, 1, 0, 0.994572, 0 )
shape = SubResource( 2 )

[node name="LAD4" type="StaticBody" parent="starship_interior" index="14"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0538693, 35.4201, 0.358351 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD4" index="0"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.909618, 0 )
shape = SubResource( 3 )

[node name="LAD5" type="StaticBody" parent="starship_interior" index="15"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0538693, 37.6481, -0.341232 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD5" index="0"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.909618, 0 )
shape = SubResource( 3 )

[node name="LAD6" type="StaticBody" parent="starship_interior" index="16"]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.0538693, 39.8995, 0.420031 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD6" index="0"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.909618, 0 )
shape = SubResource( 3 )

[node name="LAD7" type="StaticBody" parent="starship_interior" index="17"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.85911, 42.1667, 1.2934 )

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/LAD7" index="0"]
transform = Transform( 1, 0, 7.10543e-15, 0, 1, 0, -7.10543e-15, 0, 1, 0, 0.909618, 0 )
shape = SubResource( 3 )

[node name="floor" type="StaticBody" parent="starship_interior" index="18"]

[node name="CollisionShape" type="CollisionShape" parent="starship_interior/floor" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 27.5687, 0 )
shape = SubResource( 4 )

[node name="ExtDoorBtn" parent="starship_interior" index="19" instance=ExtResource( 8 )]
transform = Transform( -0.439861, 0, 0.898066, 0, 1, 0, -0.898066, 0, -0.439861, -3.8853, 28.9388, 2.02356 )

[node name="ReflectionProbes" type="Spatial" parent="starship_interior" index="20"]
visible = false

[node name="RPFloor1" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 28.848, 0 )
extents = Vector3( 4.7, 1.158, 4.7 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.858824, 0.858824, 0.858824, 1 )

[node name="RPFloor2" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 31.2497, 0 )
extents = Vector3( 4.7, 1.158, 4.7 )
origin_offset = Vector3( -1.516, 0, 0 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.858824, 0.858824, 0.858824, 1 )

[node name="RPFloor3" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 33.4678, 0 )
extents = Vector3( 4.7, 1.32, 4.7 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="RPFloor4" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 35.8749, 0 )
extents = Vector3( 4.7, 1.2, 4.7 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="RPFloor5" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 38.0923, 0 )
extents = Vector3( 4.7, 1.2, 4.7 )
origin_offset = Vector3( -2.378, 0, 0 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="RPFloor6" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40.377, 0 )
extents = Vector3( 4.7, 1.2, 4.7 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="RPFloor7" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 40.377, 0 )
extents = Vector3( 4.7, 1.2, 4.7 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="RPFloor8" type="ReflectionProbe" parent="starship_interior/ReflectionProbes" index="7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 44.111, 0 )
extents = Vector3( 4.7, 2.65345, 4.7 )
origin_offset = Vector3( -2.164, -1.728, 0 )
box_projection = true
interior_enable = true
interior_ambient_color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="chairs" type="Spatial" parent="." index="18"]

[node name="starship-chair" parent="chairs" index="0" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.392584, 39.3219, 1.97985 )
show_ui = true

[node name="starship-chair2" parent="chairs" index="1" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.60759, 39.3219, 1.97985 )

[node name="starship-chair3" parent="chairs" index="2" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.392584, 39.3219, 1.12158 )

[node name="starship-chair5" parent="chairs" index="3" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.16685, 39.3219, 1.97985 )

[node name="starship-chair6" parent="chairs" index="4" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.16685, 39.3219, 1.12158 )

[node name="starship-chair4" parent="chairs" index="5" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.60759, 39.3219, 1.12158 )

[node name="starship-chair7" parent="chairs" index="6" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.392584, 39.3219, -0.91076 )

[node name="starship-chair8" parent="chairs" index="7" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.60759, 39.3219, -0.91076 )

[node name="starship-chair9" parent="chairs" index="8" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.392584, 39.3219, -1.76903 )

[node name="starship-chair10" parent="chairs" index="9" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.16685, 39.3219, -0.91076 )

[node name="starship-chair11" parent="chairs" index="10" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2.16685, 39.3219, -1.76903 )

[node name="starship-chair12" parent="chairs" index="11" instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 1.60759, 39.3219, -1.76903 )

[node name="RemoteTransform" type="RemoteTransform" parent="." index="22"]
remote_path = NodePath("../cameras/Spatial")

[node name="cameras" type="Viewport" parent="." index="23"]
size = Vector2( 341, 200 )

[node name="Spatial" type="Spatial" parent="cameras" index="0"]

[node name="Camera" type="Camera" parent="cameras/Spatial" index="0"]
transform = Transform( -0.739762, -0.672805, -0.0092671, 0.00722937, 0.00582441, -0.999957, 0.67283, -0.739797, 0.000555279, -3.06214, 29.0187, -3.65869 )
current = true
fov = 97.5182
far = 200.0

[node name="Camera2" type="Camera" parent="cameras/Spatial" index="1"]
transform = Transform( 0.738814, -0.672805, -0.0385679, 0.0574194, 0.00582436, 0.998333, -0.671459, -0.739797, 0.0429352, -3.02925, 28.1674, -3.6953 )
current = true
fov = 97.5182
far = 200.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="24"]
root_node = NodePath("../starship_interior")
anims/RESET = SubResource( 5 )
anims/open_ext_door = SubResource( 6 )

[connection signal="button_pressed" from="starship_interior/ExtDoorBtn" to="." method="_on_ExtDoorBtn_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="starship_interior"]
